--- a/article-attachement.html
+++ b/article-attachement.html
@@ -226,12 +226,12 @@
 </head>
 <body>
     <nav>
-        <a href="valentine-trolet-epure.html" class="logo">Valentine Trolet</a>
+        <a href="index.html" class="logo">Valentine Trolet</a>
         <ul class="nav-links">
-            <li><a href="valentine-trolet-epure.html#about">À propos</a></li>
-            <li><a href="valentine-trolet-epure.html#approche">Approche</a></li>
-            <li><a href="valentine-trolet-epure.html#articles">Articles</a></li>
-            <li><a href="valentine-trolet-epure.html#contact">Contact</a></li>
+            <li><a href="index.html#about">À propos</a></li>
+            <li><a href="index.html#approche">Approche</a></li>
+            <li><a href="index.html#articles">Articles</a></li>
+            <li><a href="index.html#contact">Contact</a></li>
         </ul>
     </nav>
 
@@ -242,7 +242,7 @@
         </header>
 
         <div class="article-content">
-            <a href="valentine-trolet-epure.html#articles" class="back-link">
+            <a href="index.html#articles" class="back-link">
                 ← Retour aux articles
             </a>
 
